--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static', filename='css/styles.css')}}">
-    <title>Hello, world!</title>
+    <title>About Me</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -27,8 +27,7 @@
             </ul>
         </div>
     </nav>
-    <h1>Home Page</h1>
-    <a href="{{url_for('api')}}">Api output</a>
+    <h1>About Me</h1>
     {{name}}
     <!-- Optional JavaScript; choose one of the two! -->
 
